objects/Case.object
<CustomObject>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <label>Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>Bonnie Briant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Feldtman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Thomas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cindy Kitts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darryl Estes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edward Fattal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eli Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elise Truitt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eva DeLorio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gary Delk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jane Wells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judy Jones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathy Miller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laine DeJong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mai Yang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Buntin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melvin An</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Zibit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pat Severson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peter Romero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ralph Gatti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richard Carlsen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ron Miazga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tina Epperson</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefits__c</fullName>
        <description>Clearly and concisely list benefits statements for your proposed solution.  Include productivity gains where applicable, as well as potential for increased revenue.  Reference the tangible (hard dollar) and intangible (soft dollar) savings, and where possible, reference the business drivers associated with these statements.</description>
        <label>Benefits of Proposed Solution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bug_XRef_Number__c</fullName>
        <description>This should contain the identification number for the bug entered in Univar&apos;s bug tracking system.  This is used as a cross reference between the original business Case and the work bug established to perform the work.</description>
        <label>Bug XRef Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Driver__c</fullName>
        <description>CHECK the CATEGORy THAT BEST DESCRIBE THE REQUEST BUSINESS DRIVERS:</description>
        <label>Business Driver</label>
        <picklist>
            <picklistValues>
                <fullName>Optimization of Internal Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Growth/Margin Enhancement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ChampionsApproved__c</fullName>
        <description>In your spare time….

Can you add a field to the Case object that is a checkbox indicating “Champions Approved”?

Brian Feldtman
(206) 780-8031 Office
(206) 235-1430 Cellular
(425) 889-3712 Corporate
(206) 780-8031 Fax
Univar USA
Salesforce.com Launch Calendar
Salesforce.com Event Calendar
Salesforce.com Tips &amp; Hints Calendar
Salesforce.com Rapid Learning User Community
Salesforce.com Local User Groups</description>
        <label>Champions Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Change_Requested__c</fullName>
        <description>Used for custom field changes.  The value selected indicates whether the custom field change is an addition, modification or deletion.</description>
        <label>Change Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Field__c</fullName>
        <description>The name of the custom field that is to be added, changed or deleted.</description>
        <label>Custom Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <description>The type of control used for the custom field.  If the field already exists or the field is the be deleted N/A can be used for this field&apos;s value.</description>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checkbox</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date/Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist (Multi-Select)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URL</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>The object whose custom field should be added, modified or deleted.</description>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ChemCare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mirror Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasks</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Solution__c</fullName>
        <description>Clearly and concisely, describe the solution you are proposing to address the business opportunity at hand or the business problem.  Specify proposed changes to business processes and, if required, to technology application systems or infrastructure.  INCLUDE AN EXPLANATION OF THE IMPACT OF DOING NOTHING</description>
        <label>Proposed Solution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>Rank per Brian Feldtman April 28, 2006</description>
        <label>Ranking</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RelatedObject__c</fullName>
        <label>Related Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ChemCare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mirror Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasks</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RelatedURL__c</fullName>
        <label>Related URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>USOP_Business_Opportunity_or_Problem__c</fullName>
        <description>Clearly and concisely describe the business opportunity at hand or the business problem you are trying to solve.  Depending on complexity, you may choose to organize your statement into paragraphs labeled: Background, Current Process Overview, Problems Identified, and/or Opportunity.</description>
        <label>USOP Business Opportunity or Problem</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>